# iperf3-android

./: .gitignore  .gitmodules
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/jp/empacket/iperf3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: iperf_config.h.in
app/src/main/cpp/: jni_iperf_api.cpp
app/src/main/java/jp/empacket/iperf3/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/jp/empacket/iperf3/: ExampleUnitTest.java
